fix add produc